--- a/src/App.css
+++ b/src/App.css
@@ -107,7 +107,7 @@ input {
     border-radius: 0.3em;
     font-size: 16px;
     font-weight: bold;
-    
+    cursor: pointer;
 }
 
 .delete-btn::after {
