--- a/src/App.css
+++ b/src/App.css
@@ -157,7 +157,7 @@ input {
     background: transparent;
     text-transform: uppercase;
     font-weight: 900;
-    background-color: #3d405b;
+    background-color: #1f1f1f;
     padding: 20px;
 }
 
