--- a/src/App.css
+++ b/src/App.css
@@ -7,7 +7,8 @@
     background: url(./img/Screen\ Shot\ 2023-08-01\ at\ 9.07.35\ pm.png);
     display: flex;
 }
-h1{
+
+h1 {
     background: #212121;
     color: #f2cc8f;
     font-size: 40px;
@@ -93,6 +94,21 @@ input {
 
 .booking-details:hover {
     box-shadow: 0px 0px 80px 2px rgba(0, 255, 117, 0.30);
+}
+
+.loading-message {
+    font-size: 70px;
+    background-color: #1a1a1a;
+    border-radius: 0;
+    transition: all .2s;
+    color: #f2cc8f;
+    font-weight: bold;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: nowrap;
+    align-items: center;
+    margin-top: 10px;
+
 }
 
 .delete-btn {
